--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "canvas-constructor": "^6.0.1",
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.1",
+    "mongoose": "^6.6.5",
     "node-fetch": "^2.6.1",
     "node-schedule": "^2.1.0",
     "ts-node": "^10.8.0"
