--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.1",
     "mongoose": "^6.7.2",
     "node-fetch": "^2.6.1",
+    "node-html-to-image": "^3.2.4",
     "node-schedule": "^2.1.0",
     "ts-node": "^10.8.0"
   },
