--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "npxstart": "npx ts-node ./index.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "NoBypass",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.11.0",
-    "dotenv": "^16.0.1",
-    "ts-node": "^10.8.0"
+    "@discordjs/builders": "^1.4.0",
+    "@discordjs/rest": "^1.1.0",
+    "@types/node": "^18.7.14",
+    "chalk": "^5.2.0",
+    "discord.js": "^14.7.1",
+    "dotenv": "^16.0.2",
+    "html-to-image": "^1.11.11"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "eslint": "^8.42.0",
     "nodemon": "^2.0.20",
     "typescript": "^5.1.3"
+  },
+  "overrides": {
+    "discord-api-types": "0.37.20"
   }
 }
