--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@discordjs/rest": "^1.1.0",
     "@types/node": "^18.7.14",
     "chalk": "^5.2.0",
-    "discord.js": "^14.7.1",
+    "discord.js": "^14.11.0",
     "dotenv": "^16.0.2",
     "html-to-image": "^1.11.11"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.20",
+    "prettier": "^2.8.8",
     "typescript": "^5.1.3"
   },
   "overrides": {
