--- a/package.json
+++ b/package.json
@@ -1,35 +1,33 @@
 {
-  "name": "fds-bot",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/index.ts",
-  "scripts": {
-    "bot": "nodemon ./index.ts",
-    "start": "ts-node ./index.ts",
-    "npxstart": "npx ts-node ./index.ts"
-  },
-  "keywords": [],
-  "author": "NoBypass",
-  "license": "ISC",
-  "dependencies": {
-    "@discordjs/builders": "^1.4.0",
-    "@discordjs/rest": "^1.1.0",
-    "@types/node": "^18.7.14",
-    "chalk": "^5.2.0",
-    "discord.js": "^14.11.0",
-    "dotenv": "^16.0.2",
-    "html-to-image": "^1.11.11"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "nodemon": "^2.0.20",
-    "prettier": "^2.8.8",
-    "typescript": "^5.1.3"
-  },
-  "overrides": {
-    "discord-api-types": "0.37.20"
-  }
+    "name": "discordjs-v14-template-ts",
+    "version": "1.0.0",
+    "description": "",
+    "main": "src/index.js",
+    "scripts": {
+        "dev": "nodemon src/index.ts"
+    },
+    "keywords": [],
+    "author": "MericcaN41",
+    "license": "ISC",
+    "dependencies": {
+        "@discordjs/builders": "^1.4.0",
+        "@discordjs/rest": "^1.1.0",
+        "@types/node": "^18.7.14",
+        "chalk": "^4.1.2",
+        "discord.js": "^14.7.1",
+        "dotenv": "^16.0.2",
+        "html-to-image": "^1.11.11"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.21",
+        "typescript": "^4.8.2",
+        "@typescript-eslint/eslint-plugin": "^5.59.8",
+        "eslint": "^8.42.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "prettier": "^2.8.8"
+    },
+    "overrides": {
+        "discord-api-types": "0.37.20"
+    }
 }
