--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
         "@discordjs/rest": "^1.1.0",
         "@types/node": "^18.7.14",
         "chalk": "^4.1.2",
-        "discord.js": "^14.7.1",
+        "discord.js": "^14.11.0",
         "dotenv": "^16.0.2",
         "html-to-image": "^1.11.11"
     },
     "devDependencies": {
-        "nodemon": "^2.0.21",
-        "typescript": "^4.8.2",
         "@typescript-eslint/eslint-plugin": "^5.59.8",
         "eslint": "^8.42.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "prettier": "^2.8.8"
+        "nodemon": "^2.0.21",
+        "prettier": "^2.8.8",
+        "typescript": "^4.8.2"
     },
     "overrides": {
         "discord-api-types": "0.37.20"
