--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-TOKEN=MTA2MTM2MzU3NDg2NzUwOTQwOQ.GK_N-4.SgmtFRdHyCkzKJpFsxS0-PwjQwYHr2u_VAilyI
+TOKEN=MTA2MTM2MzU3NDg2NzUwOTQwOQ.GLK5K4.OhvprcLsYgDaFcPMaCa1symZtLm90vr5icqDQ0
 CLIENT_ID=1061363574867509409
+DB_PASSWORD=IgBiBest12+
+DB_USERNAME=NoBypass
+DB_NAME=verifiedMemberList
