--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
         "chalk": "^4.1.2",
         "discord.js": "^14.11.0",
         "dotenv": "^16.0.2",
-        "html-to-image": "^1.11.11",
         "mongodb": "^5.7.0",
-        "mongoose": "^7.3.4"
+        "mongoose": "^7.3.4",
+        "playwright": "^1.36.1",
+        "puppeteer": "^20.8.2"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.59.8",
